Added html minifier in now.json file and added .nowignore file

--- a/now.json
+++ b/now.json
@@ -2,9 +2,7 @@
     "version" : 2,
     "name" : "recruitment-task",
     "builds" : [
-        {
-            "src" : "package.json",
-            "use": "@now/static-build"
-        }
+        { "src": "package.json", "use": "@now/static-build"},
+        { "src": "*.html", "use": "@now/html-minifier"}
     ]
 }
